--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
-    "firebase": "^9.13.0",
+    "axios": "^1.1.3",
+    "firebase": "^9.14.0",
     "pinia": "^2.0.21",
     "vue": "^3.2.38",
+    "vue-dropdowns": "^1.1.2",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
