--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
+    "bootstrap-vue": "^2.23.1",
     "firebase": "^9.14.0",
     "pinia": "^2.0.21",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.20.0",
     "vue": "^3.2.38",
     "vue-dropdowns": "^1.1.2",
     "vue-router": "^4.1.5"
