--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
-    "bootstrap": "^5.2.2",
-    "bootstrap-vue": "^2.23.1",
     "firebase": "^9.14.0",
     "pinia": "^2.0.21",
     "primeicons": "^6.0.1",
@@ -20,6 +18,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2",
     "vite": "^3.0.9"
   }
 }
